--- a/Glosario/www/index.html
+++ b/Glosario/www/index.html
@@ -17,18 +17,39 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ngStorage.min.js"></script>
 
+    <script src="lib/ionic-modal-select/dist/ionic-modal-select.js"></script>
+    
+    <!-- ionic-modal-select.js -->
 
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script> 
     <script src="js/google_login.js"></script>
     
-  <!-- 
-    'starter' is the name of this angular module (js/app.js)
-  -->
+  <!-- 'starter' is the name of this angular module (js/app.js) -->
+
+  <style type="text/css">
+      .platform-ios .manual-ios-statusbar-padding{
+        padding-top:20px;
+      }
+      .manual-remove-top-padding{
+        padding-top:0px; 
+      }
+      .manual-remove-top-padding .scroll{
+        padding-top:0px !important;
+      }
+    </style>
+  
   <body ng-app="starter" animation="slide-left-right-ios7">
 
-    <ion-nav-view></ion-nav-view>
+    <div>
+      <div>
+          <ion-nav-bar class="bar-stable">
+              <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
+          </ion-nav-bar>
+          <ion-nav-view></ion-nav-view>
+      </div>
+    </div>
 
   </body>
 </html>    
