--- a/Glosario/www/index.html
+++ b/Glosario/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <!--<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"> -->
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"> 
 
     <title>Glosario</title>
 
@@ -11,10 +11,15 @@
     <link href="style/style.css" rel="stylesheet" />
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    
     <script src="lib/satellizer/satellizer.js"></script>
+
+    <!--1 <script src="lib/ngStorage.min.js"></script> -->
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+     <!--2<script src="js/google_login.js"></script> -->
 
     <script src="lib/ionic-modal-select/dist/ionic-modal-select.js"></script>
     
