--- a/Glosario/www/index.html
+++ b/Glosario/www/index.html
@@ -36,7 +36,7 @@
       </ion-nav-back-button>
     </ion-nav-bar>
 
-    <ion-nav-view> </ion-nav-view>
+    <ion-nav-view animation="slide-left-right"> </ion-nav-view>
 
   </body>
 </html>    
