--- a/Glosario/www/index.html
+++ b/Glosario/www/index.html
@@ -31,7 +31,7 @@
   <body ng-app="starter" animation="slide-left-right-ios7">
 
     <ion-nav-bar align-title="center" class="bar-positive" >
-       <ion-nav-back-button class="button-icon icon ion-chevron-left">
+       <ion-nav-back-button class="button-icon icon ion-arrow-left-a">
         Back
       </ion-nav-back-button>
     </ion-nav-bar>
