--- a/Glosario/www/index.html
+++ b/Glosario/www/index.html
@@ -12,14 +12,14 @@
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     
-    <script src="lib/satellizer/satellizer.js"></script>
+    <!--<script src="lib/satellizer/satellizer.js"></script> -->
 
-    <!--1 <script src="lib/ngStorage.min.js"></script> -->
+    <script src="lib/ngStorage.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-     <!--2<script src="js/google_login.js"></script> -->
+     <script src="js/google_login.js"></script>
 
     <script src="lib/ionic-modal-select/dist/ionic-modal-select.js"></script>
     
